feat: add frontend for email sending system with login and configuration
- Introduced login page with validation and error handling.
- Created main interface for composing and sending emails.
- Implemented email history tracking and display.
- Added configuration page for API URL setup.
- Developed JavaScript logic for handling email sending, login, and configuration.
- Included CSS for styling the login and main interface.
- Integrated Quill.js for rich text email composition.
- Established CORS handling in the backend for API requests.
- Added API routes for login, email sending, and token verification.
- Included environment variable support for user authentication.
- Created JSON response utility for consistent API responses.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy"
+    "dev:ui": "wrangler dev --config wrangler.json",
+    "dev:api": "wrangler dev --config wrangler-api.json",
+    "deploy": "wrangler deploy",
+    "deploy:ui": "wrangler deploy --config wrangler.json",
+    "deploy:api": "wrangler deploy --config wrangler-api.json"
   },
   "keywords": [
     "cloudflare",
